<resources>
    <string name="app_name">Assignment1</string>
    <string name="btnBack">Back</string>
    <string name="btnClear">AC</string>
    <string name="btnEquals">=</string>
    <string name="btnAdd">+</string>
    <string name="btnMinus">-</string>
    <string name="btnMultiply">x</string>
    <string name="btnDivide">/</string>
    <string name="btnDecimal">.</string>
    <string name="btnPlusOrMinus">±</string>
    <string name="btnZero">0</string>
    <string name="btnOne">1</string>
    <string name="btnTwo">2</string>
    <string name="btnThree">3</string>
    <string name="btnFour">4</string>
    <string name="btnFive">5</string>
    <string name="btnSix">6</string>
    <string name="btnSeven">7</string>
    <string name="btnEight">8</string>
    <string name="btnNine">9</string>
</resources>